--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
-  <title>Mogel Clients</title>
+  <title>Black Line</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Mogel Clients</h1>
+    <h1>Black Line</h1>
   </header>
   <main>
     <div class="mod-section" onclick="toggleLinks(event, 'mod1')">
@@ -34,11 +34,11 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod3')">
-      <h2>North <span class="mod-version">beta</span></h2>
+      <h2>Gothaj <span class="mod-version"> 3.01 Alpha</span></h2>
       <div id="mod3-links" class="links">
         <ul>
           <br />
-          <li><a href="north">Download Client</a></li>
+          <li><a href=" https://workupload.com/file/ChqRLaCu7Rc">Download Client</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -54,12 +54,22 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod5')">
-      <h2>Atani <span class="mod-version">0.0.2</span></h2>
+      <h2>Moon <span class="mod-version">3.0</span></h2>
       <div id="mod5-links" class="links">
         <ul>
           <br />
-          <li><a href="myj2c-thingy">DISCLAIMER</a></li>
-          <li><a href="download-atani">Download</a></li>
+          <li><a href="https://workupload.com/file/H72gSCHZxvX">Download Client</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod6')">
+      <h2>Vape <span class="mod-version">v4</span></h2>
+      <div id="mod6-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/ntepRcmhAmQ">Download Client</a></li>
+          <li><a href="no">Download Source</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -67,7 +77,7 @@
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
-    <p>© 2023 Mogel Clients. No rights reserved.</p>
+    <p>© 2024 Black Line.</p>
   </footer>
   <canvas id="canvas"></canvas>
   <script src="script.js"></script>
