--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
         </ul>
       </div>
     </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod7')">
+      <h2>Slinky <span class="mod-version">Crack</span></h2>
+      <div id="mod7-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/start/u4AxCh53ywJ">Download Client</a></li>
+          <li><a href="no">Download Source</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod8')">
+      <h2>aqua <span class="mod-version">Crack</span></h2>
+      <div id="mod8-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/ThWrUP6zbNR">Download Client</a></li>
+          <li><a href="no">Download Source</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
