--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <div class="mod-section" onclick="toggleLinks(event, 'mod1')">
-      <h2>Augustus <span class="mod-version">b2.6</span></h2>
+      <h2>Augustus <span class="mod-version">b2.6 Minecraft 1.8.9</span></h2>
       <div id="mod1-links" class="links">
         <ul>
           <br />
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod2')">
-      <h2>Vestige <span class="mod-version">v3</span></h2>
+      <h2>Vestige <span class="mod-version">v3 Minecraft 1.8.9</span></h2>
       <div id="mod2-links" class="links">
         <ul>
           <br />
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod3')">
-      <h2>Gothaj <span class="mod-version"> 3.01 Alpha</span></h2>
+      <h2>Gothaj <span class="mod-version"> 3.01 Alpha Minecraft 1.8.9</span></h2>
       <div id="mod3-links" class="links">
         <ul>
           <br />
@@ -44,7 +44,7 @@
       </div>
     </div>
         <div class="mod-section" onclick="toggleLinks(event, 'mod4')">
-      <h2>xenza <span class="mod-version">reborn b2</span></h2>
+      <h2>xenza <span class="mod-version">reborn b2 Minecraft 1.8.9</span></h2>
       <div id="mod4-links" class="links">
         <ul>
           <br />
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod5')">
-      <h2>Moon <span class="mod-version">3.0</span></h2>
+      <h2>Moon <span class="mod-version">3.0 Minecraft 1.8.9</span></h2>
       <div id="mod5-links" class="links">
         <ul>
           <br />
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod6')">
-      <h2>Vape <span class="mod-version">v4</span></h2>
+      <h2>Vape <span class="mod-version">v4 Minecraft 1.8.9</span></h2>
       <div id="mod6-links" class="links">
         <ul>
           <br />
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod7')">
-      <h2>Slinky <span class="mod-version">Crack</span></h2>
+      <h2>Slinky <span class="mod-version">Crack Minecraft 1.8.9</span></h2>
       <div id="mod7-links" class="links">
         <ul>
           <br />
@@ -86,11 +86,33 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod8')">
-      <h2>aqua <span class="mod-version">Crack</span></h2>
+      <h2>aqua <span class="mod-version">Crack Minecraft 1.8.9</span></h2>
       <div id="mod8-links" class="links">
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ThWrUP6zbNR">Download Client</a></li>
+          <li><a href="no">Download Source</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod9')">
+      <h2>Azura <span class="mod-version">X 1.3.1 Minecraft 1.20.4</span></h2>
+      <div id="mod9-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/Sv8DZfxmMpj">Download Client</a></li>
+          <li><a href="no">Download Source</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod10')">
+      <h2>Crystalwere <span class="mod-version">b10 Minecraft 1.8.9</span></h2>
+      <div id="mod10-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/P6jgPS3bG7H">Download Client</a></li>
           <li><a href="no">Download Source</a></li>
           <!-- Add more download links as needed -->
         </ul>
