--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <br />
           <li><a href="https://workupload.com/start/Jeb2rNtH25T">Download Client</a></li>
           <li><a href="no">Download Source</a></li>
+          <li><a href="#">Augustus is one of the best cheats for today. Unfortunately,
+            it is only available on version 1.8.9. But it has a good control menu,
+            a nice appearance and the possibility of almost complete customization.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
