--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/start/Jeb2rNtH25T">Download Client</a></li>
-          <li><a href="no">Augustus is one of the best cheats for today. Unfortunately,
-            it is only available on version 1.8.9. But it has a good control menu,
-            a nice appearance and the possibility of almost complete customization.</a></li>
+          <li><a href="#">Augustus is one of the best cheats for today. Unfortunately,
+            it is only available on version 1.8.9. But it has a good control menu.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -30,7 +29,7 @@
         <ul>
           <br />
           <li><a href="https://raw.githubusercontent.com/JonnyOnlineYT/mogelclients/main/vestige-v3.zip">Download Client</a></li>
-          <li><a href="https://github.com/YesCheatPlus/Vestige-v3-open-src/archive/refs/heads/main.zip">Download Src</a></li>
+          <li><a href="no">Download Src</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
