--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <ul>
           <br />
           <li><a href="https://raw.githubusercontent.com/JonnyOnlineYT/mogelclients/main/vestige-v3.zip">Download Client</a></li>
-          <li><a href="no">Download Src</a></li>
+          <li><a href="#"> It has gained popularity among players for its features and performance.
+            Players appreciate its speed, flawless execution</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -40,6 +41,7 @@
         <ul>
           <br />
           <li><a href=" https://workupload.com/file/ChqRLaCu7Rc">Download Client</a></li>
+          <li><a href="#">provides you with many great features similar to other paid clients. </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -50,6 +52,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/TpEWAcXWvV6">Download Client</a></li>
+          <li><a href="#">The client is an analog of Augustus b2.6 but with many other functions. </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -60,6 +63,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/H72gSCHZxvX">Download Client</a></li>
+          <li><a href="#">A client which fits all your needs, both visually and feature wise. </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -70,7 +74,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ntepRcmhAmQ">Download Client</a></li>
-          <li><a href="no">Download Source</a></li>
+          <li><a href="#">Get an unfair advantage over your opponents, while remaining completely undetected</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -81,7 +85,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/start/u4AxCh53ywJ">Download Client</a></li>
-          <li><a href="no">Download Source</a></li>
+          <li><a href="#">Slinky features fast injection times, with a minimal impact on in-game performance.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -92,7 +96,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ThWrUP6zbNR">Download Client</a></li>
-          <li><a href="no">Download Source</a></li>
+          <li><a href="#">The client is mainly for bedwars, but other functions do not remain unnoticed.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -103,7 +107,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/Sv8DZfxmMpj">Download Client</a></li>
-          <li><a href="no">Download Source</a></li>
+          <li><a href="#">It can please players with a good design, convenient and understandable Alt Manager</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -114,7 +118,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/P6jgPS3bG7H">Download Client</a></li>
-          <li><a href="no">Download Source</a></li>
+          <li><a href="#">Minecraft modpack based around the gamemode of Factions with all the mods</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
