--- a/index.html
+++ b/index.html
@@ -123,6 +123,50 @@
         </ul>
       </div>
     </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod11')">
+      <h2>Crystalwere reloaded <span class="mod-version">b8 Minecraft 1.8.9</span></h2>
+      <div id="mod11-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/adcWfLYq8p8">Download Client</a></li>
+          <li><a href="#">Minecraft modpack based around the gamemode of Factions with all the mods</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod12')">
+      <h2>Raven <span class="mod-version">B+ Minecraft 1.8.9</span></h2>
+      <div id="mod12-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/7yLsZeBnRN4">Download Client</a></li>
+          <li><a href="#">Raven is designed to bypass most servers, be it Hypixel or Minemen.</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod13')">
+      <h2>Rise <span class="mod-version">6.0 Minecraft 1.8.9</span></h2>
+      <div id="mod13-links" class="links">
+        <ul>
+          <br />
+          <li><a href=" https://workupload.com/file/mjrBeFtMpR5">Download Client</a></li>
+          <li><a href="#">Bypass popular servers, like Hypixel, Cubecraft, BlocksMC etc. flawlessly with Rise.</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod14')">
+      <h2>Ascension  <span class="mod-version">beta 1.0 Minecraft 1.8.9</span></h2>
+      <div id="mod14-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/TxQeJkfyTwE">Download Client</a></li>
+          <li><a href="#">no</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
