--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/start/Jeb2rNtH25T">Download Client</a></li>
-          <li><a href="#">Augustus is one of the best cheats for today. Unfortunately,
-            it is only available on version 1.8.9. But it has a good control menu.</a></li>
+          <li><a href="#">Intave, Polar, Grim</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -29,8 +28,7 @@
         <ul>
           <br />
           <li><a href="https://raw.githubusercontent.com/JonnyOnlineYT/mogelclients/main/vestige-v3.zip">Download Client</a></li>
-          <li><a href="#"> It has gained popularity among players for its features and performance.
-            Players appreciate its speed, flawless execution</a></li>
+          <li><a href="#">Intave, Polar, Grim</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -41,7 +39,7 @@
         <ul>
           <br />
           <li><a href=" https://workupload.com/file/ChqRLaCu7Rc">Download Client</a></li>
-          <li><a href="#">provides you with many great features similar to other paid clients. </a></li>
+          <li><a href="#">Matrix,Polar,Grim,Invate </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -52,7 +50,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/TpEWAcXWvV6">Download Client</a></li>
-          <li><a href="#">The client is an analog of Augustus b2.6 but with many other functions. </a></li>
+          <li><a href="#">Intave, Polar, Grim </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -63,7 +61,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/H72gSCHZxvX">Download Client</a></li>
-          <li><a href="#">A client which fits all your needs, both visually and feature wise. </a></li>
+          <li><a href="#">Intave, Polar </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -74,7 +72,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ntepRcmhAmQ">Download Client</a></li>
-          <li><a href="#">Get an unfair advantage over your opponents, while remaining completely undetected</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -85,7 +83,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/start/u4AxCh53ywJ">Download Client</a></li>
-          <li><a href="#">Slinky features fast injection times, with a minimal impact on in-game performance.</a></li>
+          <li><a href="#">Intave, Polar</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -96,7 +94,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ThWrUP6zbNR">Download Client</a></li>
-          <li><a href="#">The client is mainly for bedwars, but other functions do not remain unnoticed.</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -107,7 +105,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/Sv8DZfxmMpj">Download Client</a></li>
-          <li><a href="#">It can please players with a good design, convenient and understandable Alt Manager</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -118,7 +116,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/P6jgPS3bG7H">Download Client</a></li>
-          <li><a href="#">Minecraft modpack based around the gamemode of Factions with all the mods</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -129,7 +127,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/adcWfLYq8p8">Download Client</a></li>
-          <li><a href="#">Minecraft modpack based around the gamemode of Factions with all the mods</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -140,7 +138,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/7yLsZeBnRN4">Download Client</a></li>
-          <li><a href="#">Raven is designed to bypass most servers, be it Hypixel or Minemen.</a></li>
+          <li><a href="#">Matrix, Polar, Grim, Intave</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -151,7 +149,7 @@
         <ul>
           <br />
           <li><a href=" https://workupload.com/file/mjrBeFtMpR5">Download Client</a></li>
-          <li><a href="#">Bypass popular servers, like Hypixel, Cubecraft, BlocksMC etc. flawlessly with Rise.</a></li>
+          <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -162,7 +160,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/TxQeJkfyTwE">Download Client</a></li>
-          <li><a href="#">no</a></li>
+          <li><a href="#">Intave, Polar, Grim</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
