--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@
         </ul>
       </div>
     </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod15')">
+      <h2>Atani Client <span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod15-links" class="links">
+        <ul>
+          <br />
+          <li><a href=" https://workupload.com/file/6sbhyuvFpcD">Download Client</a></li>
+          <li><a href="#">Intave, Polar, Grim</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod16')">
+      <h2>Cycle <span class="mod-version"> B1 Minecraft 1.8.9</span></h2>
+      <div id="mod16-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/4e4ncevacizwep8/Cycle.zip/file">Download Client</a></li>
+          <li><a href="#">Intave, Polar, Grim, AAC</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
