--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <br />
           <li><a href="https://workupload.com/file/ntepRcmhAmQ">Download Client</a></li>
-          <li><a href="#">Intave, Polar, Grim, Matrix </a></li>
+          <li><a href="#">Legit Client </a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -183,6 +183,83 @@
           <br />
           <li><a href="https://www.mediafire.com/file/4e4ncevacizwep8/Cycle.zip/file">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, AAC</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod17')">
+      <h2>NightX <span class="mod-version"> B131 Minecraft 1.8.9</span></h2>
+      <div id="mod17-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/ekyjxr29724k6vl/nightx-b131.jar/file">Download Client</a></li>
+          <li><a href="#">NCP, AAC</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod18')">
+      <h2>FDP Client <span class="mod-version"> B7 Minecraft 1.8.9</span></h2>
+      <div id="mod18-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/qr2v65r2qyps3za/FDPClient-build.jar/file">Download Client</a></li>
+          <li><a href="#">Intave, Polar, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod19')">
+      <h2>Raven XD <span class="mod-version"> 2.6.0 Minecraft 1.8.9</span></h2>
+      <div id="mod19-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/8wau5yt0liipi9w/raven-XD.jar/file">Download Client</a></li>
+          <li><a href="#">Matrix, Polar, Grim, Intave</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod20')">
+      <h2>VegaLine <span class="mod-version"> PrePreLastest Minecraft 1.12.2</span></h2>
+      <div id="mod20-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/kgQX3za2H6N">Download Client</a></li>
+          <li><a href="#">Matrix, Polar, Grim, Intave</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod21')">
+      <h2>Breeze<span class="mod-version">  Minecraft 1.8.9</span></h2>
+      <div id="mod21-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://social-unlock.com/breeze_client">Download Client</a></li>
+          <li><a href="#">Legit client</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod22')">
+      <h2>Skid client<span class="mod-version">13.11  Minecraft 1.8.9</span></h2>
+      <div id="mod22-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/66086vh2yztd04z/Skid.zip/file">Download Client</a></li>
+          <li><a href="#">Intave, Matrix, Grim</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod23')">
+      <h2>Icarus Client<span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod23-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/jtnfom02lpfukeb/Icarus.zip/file">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Watchdog, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
