--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div id="mod21-links" class="links">
         <ul>
           <br />
-          <li><a href="https://social-unlock.com/breeze_client">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/jpk0q5c6pwi5vqu/breeze_mod_crack.rar/file">Download Client</a></li>
           <li><a href="#">Legit client</a></li>
           <!-- Add more download links as needed -->
         </ul>
@@ -259,7 +259,62 @@
         <ul>
           <br />
           <li><a href="https://www.mediafire.com/file/jtnfom02lpfukeb/Icarus.zip/file">Download Client</a></li>
-          <li><a href="#">Intave, NCP, Vulcan, Watchdog, Matrix</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod24')">
+      <h2>Koksense<span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod24-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/cumwGpUpEcW">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod25')">
+      <h2>Sharnot<span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod25-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://drive.google.com/file/d/1z7fZajwUnlibhmOHBlvj8Dl8xIfo1o29/view">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod26')">
+      <h2>North<span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod26-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/1mysgkvptzo63ff/northshitintave.rar/file">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod27')">
+      <h2>Tarasande<span class="mod-version"> Minecraft 1.8.9</span></h2>
+      <div id="mod27-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/1vwwv243a3aprsv/tarasande_files.rar/file">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod28')">
+      <h2>Vestige<span class="mod-version">Plus 1.4 Minecraft 1.8.9</span></h2>
+      <div id="mod28-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/uwz2aen91uhidal/vestige%252B_softland.zip/file">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
