--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="mod3-links" class="links">
         <ul>
           <br />
-          <li><a href=" https://workupload.com/file/ChqRLaCu7Rc">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/folder/nsp7oda5ymgth/Gothaj+3.01b-Alpha">Download Client</a></li>
           <li><a href="#">Matrix,Polar,Grim,Invate </a></li>
           <!-- Add more download links as needed -->
         </ul>
@@ -60,7 +60,7 @@
       <div id="mod5-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/H72gSCHZxvX">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/x8bqhr2j3sk7ki8/moon.rar/file">Download Client</a></li>
           <li><a href="#">Intave, Polar </a></li>
           <!-- Add more download links as needed -->
         </ul>
@@ -89,11 +89,11 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod8')">
-      <h2>aqua <span class="mod-version">Crack Minecraft 1.8.9</span></h2>
+      <h2>Gothaj <span class="mod-version">2.0 Minecraft 1.8.9</span></h2>
       <div id="mod8-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/ThWrUP6zbNR">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/fvccam3km91acpy/Gothaj_Client_2.0.zip/file">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
@@ -104,40 +104,40 @@
       <div id="mod9-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/Sv8DZfxmMpj">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/folder/qs6l0rlkm5ske/Azura+X+1.3.1">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod10')">
-      <h2>Crystalwere <span class="mod-version">b10 Minecraft 1.8.9</span></h2>
+      <h2>Eject <span class="mod-version">0.0.1 Minecraft 1.8.9</span></h2>
       <div id="mod10-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/P6jgPS3bG7H">Download Client</a></li>
+          <li><a href="https://drive.google.com/file/d/1KgndVhfohoVbIby2mFHTT6utDNGaOh8Y/view">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod11')">
-      <h2>Crystalwere reloaded <span class="mod-version">b8 Minecraft 1.8.9</span></h2>
+      <h2>Kevin <span class="mod-version">reborn Minecraft 1.8.9</span></h2>
       <div id="mod11-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/adcWfLYq8p8">Download Client</a></li>
+          <li><a href="https://drive.google.com/file/d/1fQwMJ3UzFvBEUMCkCmTCUPOtE-1FVHh6/view">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod12')">
-      <h2>Raven <span class="mod-version">B+ Minecraft 1.8.9</span></h2>
+      <h2>Raven <span class="mod-version">Bs Minecraft 1.8.9</span></h2>
       <div id="mod12-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/7yLsZeBnRN4">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/vim54x78dmd5k6h/raven-bS.jar/file">Download Client</a></li>
           <li><a href="#">Matrix, Polar, Grim, Intave</a></li>
           <!-- Add more download links as needed -->
         </ul>
@@ -148,18 +148,18 @@
       <div id="mod13-links" class="links">
         <ul>
           <br />
-          <li><a href=" https://workupload.com/file/mjrBeFtMpR5">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/3w3oole1l0ma2t7/RIse.zip/file">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod14')">
-      <h2>Ascension  <span class="mod-version">beta 1.0 Minecraft 1.8.9</span></h2>
+      <h2>Opal <span class="mod-version">20.4 Minecraft 1.8.9</span></h2>
       <div id="mod14-links" class="links">
         <ul>
           <br />
-          <li><a href="https://workupload.com/file/TxQeJkfyTwE">Download Client</a></li>
+          <li><a href="https://www.mediafire.com/file/7ggxdp9uqwljor7/opal_files.rar/file">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim</a></li>
           <!-- Add more download links as needed -->
         </ul>
