--- a/index.html
+++ b/index.html
@@ -319,6 +319,17 @@
         </ul>
       </div>
     </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod29')">
+      <h2>Eject<span class="mod-version">4.1.3 Minecraft 1.8.8</span></h2>
+      <div id="mod29-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://www.mediafire.com/file/a90115vv3duwmrt/Eject_4.1.3.zip/file">Download Client</a></li>
+          <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
