--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <br />
           <li><a href="https://workupload.com/start/Jeb2rNtH25T">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim</a></li>
-          <li><a href="#">Intave, Polar, Grim</a></li>
+          <li><a href="#">test</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
