--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <br />
           <li><a href="https://workupload.com/start/Jeb2rNtH25T">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim</a></li>
+          <li><a href="#">Description:</a></li>
           <li><a href="#">Augustus is one of the best cheats for today.</a></li>
           <li><a href="#">Unfortunately, it is only available on version 1.8.9.</a></li>
           <li><a href="#">But it has a good control menu, a nice appearance and</a></li>
