--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           <br />
           <li><a href="https://raw.githubusercontent.com/JonnyOnlineYT/mogelclients/main/vestige-v3.zip">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Vestige Client (1.8.9) is a free client designed for playing BlocksMC and Hypixel Servers</a></li>
+          <li><a href="#">It has gained popularity among players for its features and performance. </a></li>
+          <li><a href="#">Some of its notable features include scaffold, auto block, and ghost modules.</a></li>
+          <li><a href="#">Players appreciate its speed, flawless execution, and high quality, especially in blade mode.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -45,6 +50,9 @@
           <br />
           <li><a href="https://www.mediafire.com/folder/nsp7oda5ymgth/Gothaj+3.01b-Alpha">Download Client</a></li>
           <li><a href="#">Matrix,Polar,Grim,Invate </a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Gothaj is a fairly popular and high-quality crack of the collection of cheat functions for minecraft 1.8.9, </a></li>
+          <li><a href="#">it has a good control menu and the ability to work on vanilla minecraft. It works great on multi-user servers.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -56,6 +64,11 @@
           <br />
           <li><a href="https://workupload.com/file/TpEWAcXWvV6">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim </a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">xenza is an analog of Augustus 2.6 but with a large set of functions.</a></li>
+          <li><a href="#">Unfortunately, it is only available on version 1.8.9.</a></li>
+          <li><a href="#">But it has a good control menu, a nice appearance and</a></li>
+          <li><a href="#">the possibility of almost complete customization.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -67,6 +80,9 @@
           <br />
           <li><a href="https://www.mediafire.com/file/x8bqhr2j3sk7ki8/moon.rar/file">Download Client</a></li>
           <li><a href="#">Intave, Polar </a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">A client which fits all your needs, both visually and feature wise.</a></li>
+          <li><a href="#">Provides easy usability while staying customizable through our scripting system.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -78,6 +94,10 @@
           <br />
           <li><a href="https://workupload.com/file/ntepRcmhAmQ">Download Client</a></li>
           <li><a href="#">Legit Client </a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Vape is designed specifically for the closet cheater, giving you undetectable advantages in combat.</a></li>
+          <li><a href="#">No updates required. Our combat modules are designed to last, built to work on any anticheat without relying on temporary bypasses.</a></li>
+          <li><a href="#">Enhance your performance with super-human aiming on multiple modules, while retaining full control of your cursor.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
