--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
           <br />
           <li><a href="https://www.mediafire.com/file/fvccam3km91acpy/Gothaj_Client_2.0.zip/file">Download Client</a></li>
           <li><a href="#">Intave, Polar, Grim, Matrix</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Gothaj is a fairly popular and high-quality crack of the collection of cheat functions for minecraft 1.8.9, </a></li>
+          <li><a href="#">it has a good control menu and the ability to work on vanilla minecraft. It works great on multi-user servers.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -340,6 +343,11 @@
           <br />
           <li><a href="https://www.mediafire.com/file/uwz2aen91uhidal/vestige%252B_softland.zip/file">Download Client</a></li>
           <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Vestige Client (1.8.9) is a free client designed for playing BlocksMC and Hypixel Servers</a></li>
+          <li><a href="#">It has gained popularity among players for its features and performance. </a></li>
+          <li><a href="#">Some of its notable features include scaffold, auto block, and ghost modules.</a></li>
+          <li><a href="#">Players appreciate its speed, flawless execution, and high quality, especially in blade mode.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
