--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
   </main>
   <footer>
     <p>© 2024 Black Line.</p>
+    <p>And please subscribe to youtube channel - https://www.youtube.com/@The_souldreams.</p>
   </footer>
   <canvas id="canvas"></canvas>
   <script src="script.js"></script>
