--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@
           <br />
           <li><a href="https://www.mediafire.com/file/1mysgkvptzo63ff/northshitintave.rar/file">Download Client</a></li>
           <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">North is a library that implements the OAuth 1.0a consumer and provider protocols.</a></li>
+          <li><a href="#">It allows you to connect to an OAuth provider and request its resources,</a></li>
+          <li><a href="#">or to build your own OAuth provider.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -332,6 +336,10 @@
           <br />
           <li><a href="https://www.mediafire.com/file/1vwwv243a3aprsv/tarasande_files.rar/file">Download Client</a></li>
           <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">Tarasande Client Mod (1.20.4, 1.20.1) provides various features that give players an advantage</a></li>
+          <li><a href="#">such as ESP (Extra Sensory Perception) to see other players through walls</a></li>
+          <li><a href="#">aimbot functionality, and other enhancements.</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
@@ -359,6 +367,10 @@
           <br />
           <li><a href="https://www.mediafire.com/file/a90115vv3duwmrt/Eject_4.1.3.zip/file">Download Client</a></li>
           <li><a href="#">Intave, NCP, Vulcan, Matrix</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">An incredibly good GommeHD / Intave client</a></li>
+          <li><a href="#">Frequently receives updates for Gomme and Intave AntiCheat </a></li>
+          <li><a href="#">It is also ideal for gamers, cheaters and other Intave servers!</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
