--- a/index.html
+++ b/index.html
@@ -375,11 +375,25 @@
         </ul>
       </div>
     </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod30')">
+      <h2>LB - LiquidBounce<span class="mod-version"> b100 legacy Minecraft 1.7 - 1.8.9</span></h2>
+      <div id="mod30-links" class="links">
+        <ul>
+          <br />
+          <li><a href="I'm sorry, he's not here yet.">Download Client mod </a></li>
+          <li><a href="https://liquidbounce.net/?ref=website-popularity">Download Client on official site LB</a></li>
+          <li><a href="#">maybe all anticheats</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">LiquidBounce is a free and open-source mixin-based injection hacked client using the Fabric API for Minecraft.</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
     <!-- Add more mod sections as needed -->
   </main>
   <footer>
     <p>© 2024 Black Line.</p>
-    <p>And please subscribe to youtube channel - https://www.youtube.com/@The_souldreams.</p>
+    <p>And please subscribe to youtube channel - https://www.youtube.com/@yoSoulDreams.</p>
   </footer>
   <canvas id="canvas"></canvas>
   <script src="script.js"></script>
