--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <header>
     <h1>Black Line</h1>
   </header>
+  <div class="tab">
+    <button class="tablinks" onclick="openCity(event, 'Clients')">Clients</button>
+    <button class="tablinks" onclick="openCity(event, 'Configs')">Configs</button>
+    <button class="tablinks" onclick="openCity(event, 'Discord')">Discord</button>
+  </div>
+  
+  
+  <div id="Clients" class="tabcontent">
+    <h3>Clients</h3>
+    
   <main>
     <div class="mod-section" onclick="toggleLinks(event, 'mod1')">
       <h2>Augustus <span class="mod-version">b2.6 Minecraft 1.8.9</span></h2>
@@ -44,11 +54,11 @@
       </div>
     </div>
     <div class="mod-section" onclick="toggleLinks(event, 'mod3')">
-      <h2>Gothaj <span class="mod-version"> 3.01 Alpha Minecraft 1.8.9</span></h2>
+      <h2>Gothaj <span class="mod-version">3.3.0-1 Alpha Minecraft 1.8.9</span></h2>
       <div id="mod3-links" class="links">
         <ul>
           <br />
-          <li><a href="https://www.mediafire.com/folder/nsp7oda5ymgth/Gothaj+3.01b-Alpha">Download Client</a></li>
+          <li><a href="https://github.com/6000IQPLAY/Gothaj3.3.0-1/releases/tag/1">Download Client</a></li>
           <li><a href="#">Matrix,Polar,Grim,Invate </a></li>
           <li><a href="#">Description:</a></li>
           <li><a href="#">Gothaj is a fairly popular and high-quality crack of the collection of cheat functions for minecraft 1.8.9, </a></li>
@@ -385,6 +395,19 @@
           <li><a href="#">maybe all anticheats</a></li>
           <li><a href="#">Description:</a></li>
           <li><a href="#">LiquidBounce is a free and open-source mixin-based injection hacked client using the Fabric API for Minecraft.</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <div class="mod-section" onclick="toggleLinks(event, 'mod31')">
+      <h2>NSC Client<span class="mod-version"> b2.2.2 Minecraft 1.8.9</span></h2>
+      <div id="mod31-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://workupload.com/file/UJxXZkSLnph">Download Client mod </a></li>
+          <li><a href="#">intave</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">-</a></li>
           <!-- Add more download links as needed -->
         </ul>
       </div>
