--- a/index.html
+++ b/index.html
@@ -413,6 +413,20 @@
       </div>
     </div>
     <!-- Add more mod sections as needed -->
+    <div class="mod-section" onclick="toggleLinks(event, 'mod32')">
+      <h2>Augustus Client<span class="mod-version"> b4.20.3 Minecraft 1.8.9</span></h2>
+      <div id="mod32-links" class="links">
+        <ul>
+          <br />
+          <li><a href="https://go.linkify.ru/1seh">Download Client</a></li>
+          <li><a href="#">intave and ohters</a></li>
+          <li><a href="#">Description:</a></li>
+          <li><a href="#">open file and run start.bat and wait for it to load</a></li>
+          <!-- Add more download links as needed -->
+        </ul>
+      </div>
+    </div>
+    <!-- Add more mod sections as needed -->
   </main>
   <footer>
     <p>© 2024 Black Line.</p>
