--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
   </main>
   <footer>
     <p>© 2024 Black Line.</p>
-    <p>And please subscribe to youtube channel - https://www.youtube.com/@yoSoulDreams.</p>
+    <p>And please join on discord server - https://discord.gg/W5YeZTjs</p>
   </footer>
   <canvas id="canvas"></canvas>
   <script src="script.js"></script>
